# coffee_shop_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  scheduler.py  utils.py
app/actors/: clear_expired_authorizations.py
app/alembic/: env.py
app/alembic/versions/: 04a0687ad4f3_initial.py
app/core/: config.py  database.py  security.py
app/models/: base.py  user.py
app/repositories/: user.py
app/routers/: auth.py  users.py
app/schemas/: auth.py  user.py
app/services/: user.py
